# python-toy-projects

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pyrightconfig.json
01_simple_flask_app/: app.py
01_simple_flask_app/templates/: about.html  greet.html  index.html
02_simple_flask_blog/: app.py
02_simple_flask_blog/app/: app.py
02_simple_flask_blog/app/static/css/: style.css
02_simple_flask_blog/app/templates/: 404.html  index.html  layout.html  post.html
02_simple_flask_blog/templates/: index.html  post.html
03_contact_form_app/: app.py
03_contact_form_app/app/: app.py
03_contact_form_app/app/static/css/: style.css
03_contact_form_app/app/templates/: contact.html  success.html
04_user_registration_app/app/: app.py
04_user_registration_app/app/static/: style.css
04_user_registration_app/app/static/css/: style.css
04_user_registration_app/app/templates/: login.html  register.html
05_mini_weather_api/: app.py
06_deploy_flask_app/: README.md
06_deploy_flask_app/flask_app/: requirements.txt
06_deploy_flask_app/flask_app/static/css/: style.css
06_deploy_flask_app/flask_app/templates/: index.html
07_ascii_art_generator/: main.py  snoopy.txt
08_pomodoro_timer_app/: main.py
09_social_media_scraper/: main.py  social_media.csv  social_media.html
10_automated_backup_tool/: USAGE.md  main.py
10_automated_backup_tool/my_files/: index.html
