[project]
name = "python-toy-projects"
version = "0.1.0"
description = "Toy projects to pass time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]

[tool.ruff.lint]
extend-select = ["B"]
