[project]
name = "python-toy-projects"
version = "0.1.0"
description = "Toy projects to pass time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "phonenumbers>=9.0.22",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]

[tool.ruff.lint]
extend-select = ["B"]
